[package]
name = "api_trial"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
staticmap = "0.4.0"
serde_json = "1.0.68"
